# csv-explorer

./: README.md  package-lock.json  package.json  test.py
src/: App.css  App.tsx  Dashboard.tsx  FileExplorer.tsx  PythonExecutor.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/config/: utils.tsx
src/context/: AppContextProvider.tsx  fileDrop.ts  shortcuts.ts
src/css/: Dashboard.css  FileExplorer.css
